add model field type convert
